--- a/src/main/resources/static/article-list.html
+++ b/src/main/resources/static/article-list.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Home</title>
+  <title>게시글 목록</title>
+  <style>
+    .list table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    .list table th, .list table td {
+      border: solid 1px #000;
+    }
+  </style>
 </head>
 <body>
-<h1>Home</h1>
+<h1>게시글 목록</h1>
 <div>
   <a href="article.html">게시글</a>
   |
@@ -13,6 +23,47 @@
   |
   <a href="logout.html">로그아웃</a>
 </div>
-
+<div class="list">
+  <table>
+    <thead>
+    <tr>
+      <th>
+        NO
+      </th>
+      <th>
+        제목
+      </th>
+      <th>
+        작성자
+      </th>
+      <th>
+        등록일자
+      </th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="s: ${list}">
+      <td th:number="${s.articleNum}"></td>
+      <td th:text="${s.title}"></td>
+      <td th:text="${s.id}"></td>
+      <td th:datetime="${s.regDate}"></td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+<div>
+  <form method="get">
+    <label>
+      <select name="searchType">
+        <option value="all">전체</option>
+        <option th:selected="${#strings.equals(param.searchType, 'title')}" value="title">제목</option>
+        <option th:selected="${#strings.equals(param.searchType, 'content')}" value="content">내용</option>
+        <option th:selected="${#strings.equals(param.searchType, 'id')}" value="id">작성자</option>
+      </select>
+      <input type="text" name="search" placeholder="검색어를 입력하세요.">
+      <button type="submit">검색</button>
+    </label>
+  </form>
+</div>
 </body>
 </html>
