--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Home</h1>
 <div>
-  <a href="article.html">게시글</a>
+  <a href="article.html">글 목록</a>
   |
   <a href="login.html">로그인</a>
   |
