--- a/src/main/resources/static/article-list.html
+++ b/src/main/resources/static/article-list.html
@@ -17,7 +17,7 @@
 <body>
 <h1>게시글 목록</h1>
 <div>
-  <a href="article.html">게시글</a>
+  <a href="create-article.html">게시글</a>
   |
   <a href="login.html">로그인</a>
   |
