--- a/src/main/resources/static/create-article.html
+++ b/src/main/resources/static/create-article.html
@@ -8,7 +8,7 @@
 <div>
   <a href="home.html">홈</a>
   |
-  <a href="article-list.html">글 목록</a>
+  <a href="create-article-list.html">글 목록</a>
   |
   <a href="login.html">로그인</a>
   |
