--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -7,7 +7,7 @@
 <body>
 <h1>로그인 페이지</h1>
 <div>
-  <a href="article.html">게시글</a>
+  <a href="create-article.html">게시글</a>
 </div>
 <div th:text="${errorMessage}"></div>
 <div>
